written test to check model size and updated config

--- a/diffusion/visualize.ipynb
+++ b/diffusion/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -48,6 +48,7 @@
     "fig, axs = plt.subplots(1, N, figsize=(20, 4))\n",
     "for i, file in enumerate(files):\n",
     "    data = np.load(file).T\n",
+    "    print(data.shape)\n",
     "    axs[i].imshow(data, cmap='gray')\n",
     "    axs[i].axis('off')\n",
     "    axs[i].set_title(file.split('/')[-1])\n",
