--- a/foundation_models/visualize.ipynb
+++ b/foundation_models/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
     "import os\n",
     "os.chdir('/home/sarvagya/DeepLenseSubmissionProposal-2025')\n",
     "\n",
-    "axion_path = 'data/Dataset/axion/axion_sim_356113875435765399182650162198846.npy'\n",
+    "axion_path = 'data/Dataset/axion/axion_sim_339321430908353297068939651799477896926.npy'\n",
     "cdm_path = 'data/Dataset/cdm/cdm_sim_20369110413407829654262885881264060.npy'\n",
     "no_path = 'data/Dataset/no_sub/no_sub_sim_6956151560647865808482838248806684.npy'\n",
     "\n",
@@ -29,6 +29,48 @@
     "no = np.load(no_path, allow_pickle=True)\n",
     "\n",
     "print(f\"axion: {axion.shape}, cdm: {cdm.shape}, no: {no.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(1.951192159202817e-12), np.float64(3.837134549785011))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = axion[0]\n",
+    "\n",
+    "np.min(t), np.max(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(5.0009526335747644e-24)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "axion[1]"
    ]
   }
  ],
